address sonarcloud findings: extract config keys, math.clamp, drop redundant override